feat: finalize boilerplate
